...
            <RadioButton
                android:id="@+id/replace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input"
...
